--- a/Packages/client/vercel.json
+++ b/Packages/client/vercel.json
@@ -3,5 +3,5 @@
     "enabled": false,
     "silent": true
   },
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
